# nonebot-plugin-pixivbot

./: .gitignore  AGENT.md  README.md  __init__.py  bot.py  cache_data_source.py  cache_manager.py  common_command.py  config.py  context.py  data_source.py  distributor.py  errors.py  handler.py  illust_msg_maker.py  mongo_conn.py  mongo_helper.py  msg_maker.py  pixiv.py  pixiv_api.py  pixiv_binding_manager.py  pkg_context.py  postman.py  pyproject.toml  query_error.py  random_illust.py  requirements.txt  scheduled_distributor.py  scheduler.py  super_command.py  superuser_command.py  timedelta_proportion.ipynb  utils.py
.github/workflows/: codeql-analysis.yml  python-build.yml  python-publish.yml
command/: __init__.py  catch_error.py  common_command.py  pkg_context.py  super_command.py  utils.py
controller/: __init__.py  distributor.py  request_recorder.py  scheduler.py  service.py
data_source/: __init__.py  cache_data_source.py  cache_manager.py  compressor.py  data_source.py  local_tags.py  mongo_conn.py  pixiv_bindings.py  pixiv_data_source.py  subscriptions.py
data_source/pixiv/: __init__.py  abstract_data_source.py  cache_data_source.py  cache_manager.py  compressor.py  lazy_illust.py  pixiv_data_source.py  pkg_context.py  remote_data_source.py
docs/: data_flow.drawio  development_manual.md
handler/: __init__.py  abstract_handler.py  illust_handler.py  illust_query.py  more_handler.py  pkg_context.py  random_bookmark_handler.py  random_bookmark_query.py  random_illust_handler.py  random_illust_query.py  random_recommended_illust_handler.py  random_recommended_illust_query.py  random_related_illust_handler.py  random_user_illust_handler.py  random_user_illust_query.py  ranking_handler.py  ranking_nth_query.py  ranking_query.py  recorder.py  req_resp.py
model/: Error.py  Illust.py  LazyIllust.py  PixivError.py  Result.py  User.py  __init__.py  tag.py
postman/: __init__.py  abstract_postman.py  errors.py  pkg_context.py  postman.py
service/: __init__.py  pixiv_service.py  roulette.py  scheduler.py
src/nonebot_plugin_pixivbot/: __init__.py  config.py  context.py  enums.py  global_context.py  nb_providers.py  plugin_service.py  providers.py  usage.py  utils.py
src/nonebot_plugin_pixivbot/authenticator/: authenticator.py
src/nonebot_plugin_pixivbot/config/: __init__.py  block_action.py  config.py
src/nonebot_plugin_pixivbot/data/: __init__.py  errors.py  interval_task_repo.py  local_tag.py  local_tag_repo.py  nb_session.py  pixiv_binding.py  pixiv_binding_repo.py  subscription.py  subscription_repo.py  watch_task.py  watch_task_repo.py
src/nonebot_plugin_pixivbot/data_source/: local_tags.py  mongo_conn.py  pixiv_bindings.py  subscriptions.py
src/nonebot_plugin_pixivbot/handler/: __init__.py  base.py  entry_handler.py  handler.py  illust_handler.py  matcher_group.py  pkg_context.py  random_bookmark_handler.py  random_recommended_illust_handler.py  recorder.py  utils.py
src/nonebot_plugin_pixivbot/model/: __init__.py  identifier.py  illust.py  interval_task.py  pixiv_binding.py  post_identifier.py  subscription.py  tag.py  user.py  user_preview.py  watch_task.py
src/nonebot_plugin_pixivbot/nb_provider/: __init__.py  apscheduler.py
src/nonebot_plugin_pixivbot/platform/: __init__.py  func_manager.py
src/nonebot_plugin_pixivbot/postman/: __init__.py  post_destination.py  post_helper.py  post_identifier.py  postman.py
src/nonebot_plugin_pixivbot/protocol_dep/: __init__.py  adapter_manager.py  authenticator.py  post_dest.py  postman.py  protocol_dep.py  user_authenticator.py
src/nonebot_plugin_pixivbot/query/: __init__.py  command.py  delegateion_query.py  illust.py  illust_link.py  more.py  query.py  query_manager.py  random_bookmark.py  random_illust.py  random_recommended_illust.py  random_related_illust.py  random_user_illust.py  ranking.py  utils.py
src/nonebot_plugin_pixivbot/service/: __init__.py  interval_task_worker.py  pixiv_account_binder.py  pixiv_service.py  pkg_context.py  postman.py  roulette.py  scheduler.py  service.py  watchman.py
src/nonebot_plugin_pixivbot/utils/: algorithm.py  auto_retry.py  config.py  (+10 more)
src/nonebot_plugin_pixivbot_kook/: __init__.py  config.py  enums.py
src/nonebot_plugin_pixivbot_onebot_v11/: __init__.py  config.py
src/nonebot_plugin_pixivbot_telegram/: __init__.py  config.py
src/tests/: __init__.py  conftest.py  test_context.py  test_load.py
utils/: __init__.py  cache_manager.py  errors.py
(+226 files in other folders)
