[tool.poetry]
name = "nonebot-plugin-pixivbot"
version = "2.0.0"
description = "Nonebot Plugin PixivBot"
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ssttkkl/nonebot-plugin-pixivbot"
packages = [
    { include = "nonebot_plugin_pixivbot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
nonebot_plugin_apscheduler = "^0.2.0"
nonebot-plugin-access-control = ">=0.5.5"
nonebot-plugin-session = ">=0.0.4"
nonebot-plugin-send-anything-anywhere = "^0.2.7"
PixivPy-Async = "^1.2.14"
Pillow = "^9.2.0"
numpy = "^1.23.1"
lazy = "^1.4"
aiohttp-socks = "^0.8.0"
frozendict = "^2.3.4"
tzlocal = "^5.0.1"
cachetools = "^5.2.0"
asyncache = "^0.3.1"
shortuuid = "^1.0.9"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.5"
flake8 = "^6.0.0"
asyncpg = "^0.27.0"
nonebot2 = { extras = ["fastapi", "websocket", "httpx"], version = "^2.0.0" }
nonebot-adapter-onebot = "^2.2.1"
nonebot-adapter-kaiheila = "^0.2.0"
nonebot-adapter-qqguild = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
