[tool.poetry]
name = "nonebot-plugin-pixivbot"
version = "2.1.6"
description = "Nonebot Plugin PixivBot"
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ssttkkl/nonebot-plugin-pixivbot"
packages = [
    { include = "nonebot_plugin_pixivbot", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.3"
nonebot_plugin_apscheduler = ">=0.3.0"
nonebot-plugin-access-control = "^1.2"
nonebot-plugin-session = ">=0.2.0"
nonebot-plugin-session-orm = ">=0.1.1"
nonebot-plugin-session-saa = ">=0.1.0"
nonebot-plugin-send-anything-anywhere = ">=0.3.0"
nonebot-plugin-localstore = ">=0.5.1"
PixivPy-Async = "^1.2.14"
Pillow = ">=10.3.0"
numpy = ">=1.23.1"
lazy = "^1.4"
frozendict = ">=2.3.4"
tzlocal = ">=5.0.1"
cachetools = ">=5.2.0"
asyncache = ">=0.3.1"
shortuuid = ">=1.0.9"
ssttkkl-nonebot-utils = ">=0.1.23"
aiofiles = ">=23.2.1"
SQLAlchemy = { version = "^2.0.0", extras = ["asyncio"] }
aiosqlite = ">=0.18.0"
pytz = ">=2024.2"

[tool.poetry.group.dev.dependencies]
nb-cli = "^1.0.5"
flake8 = "^6.0.0"
#asyncpg = "^0.27.0"
aiohttp-socks = ">=0.8.0"
nonebot2 = { extras = ["fastapi", "websocket", "httpx"], version = "^2.3" }
autopep8 = "^2.0.4"
nonebug = "^0.3.6"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pydantic-settings = "^2.4.0"

[tool.nonebot]
plugins = ["nonebot_plugin_pixivbot"]
plugin_dirs = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
