[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/nonebot_plugin_pixivbot"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "nonebot-plugin-pixivbot"
version = "2.1.6"
description = "Nonebot Plugin PixivBot"
authors = [
    {name = "ssttkkl", email = "huang.wen.long@hotmail.com"},
]
dependencies = [
    "nonebot2<3.0,>=2.3",
    "nonebot-plugin-apscheduler>=0.3.0",
    "nonebot-plugin-access-control<2.0,>=1.2",
    "nonebot-plugin-session>=0.2.0",
    "nonebot-plugin-session-orm>=0.1.1",
    "nonebot-plugin-session-saa>=0.1.0",
    "nonebot-plugin-send-anything-anywhere>=0.3.0",
    "nonebot-plugin-localstore>=0.5.1",
    "PixivPy-Async<2.0.0,>=1.2.14",
    "Pillow>=10.3.0",
    "numpy>=1.23.1",
    "lazy<2.0,>=1.4",
    "frozendict>=2.3.4",
    "tzlocal>=5.0.1",
    "cachetools>=5.2.0",
    "asyncache>=0.3.1",
    "shortuuid>=1.0.9",
    "ssttkkl-nonebot-utils>=0.1.23",
    "aiofiles>=23.2.1",
    "SQLAlchemy[asyncio]<3.0.0,>=2.0.0",
    "aiosqlite>=0.18.0",
    "pytz>=2024.2",
]
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/ssttkkl/nonebot-plugin-pixivbot"

[dependency-groups]
dev = [
    "nb-cli<2.0.0,>=1.0.5",
    "flake8<7.0.0,>=6.0.0",
    "aiohttp-socks>=0.8.0",
    "nonebot2[fastapi,httpx,websocket]<3.0,>=2.3",
    "autopep8<3.0.0,>=2.0.4",
    "nonebug<1.0.0,>=0.3.6",
    "pytest<8.0.0,>=7.4.3",
    "pytest-asyncio<1.0.0,>=0.21.1",
    "pytest-cov<5.0.0,>=4.1.0",
    "pydantic-settings<3.0.0,>=2.4.0",
]

[tool.nonebot]
plugins = ["nonebot_plugin_pixivbot"]
plugin_dirs = []